# estimacion-paralajes

./: .gitignore  README.md  apa7_ula.cls  bibliography.bib  main.tex  pixi.toml  pyproject.toml  requirements.txt
data/raw/: gaia_sample.vot
notebooks/: 1.0_data_preparation.ipynb  1.0_data_preparation.py  1.1_data_preparation.py  1.5_data_preparation.ipynb  1.5_data_preparation.py  2.0_base_model.ipynb  2.0_base_model.py  2.0_marginalized_model.ipynb  2.1_numpyro_model.ipynb  2.1_numpyro_model.py  2.1_precompute_cmd_model.ipynb  2.2_backend_comparison.ipynb  2.2_backend_comparison.py  2.2_pure_gibbs_model.ipynb  2.3_gibbs_hybrid_model_pymc.ipynb  3.0_experimento_principal.ipynb  3.0_experimento_principal.py
reports/: apa7_ula.cls  bibliography.bib  main.tex
src/plots/: cmd.py  contraccion_bayesiana.py  flujo_simulaciones.py  gmm_cmd.py
src/project/plots/: comparacion_priors.py  efecto_extincion.py  flujo_iterativo.py  plate_notation.py  trigonometric_parallax.py
src/project/utils/: __init__.py  data.py  download.py  load.py  plots.py
src/project/validation/: README.md  __init__.py  arviz_checks.py
src/utils/: __init__.py
