[project]
name = "estimacion-paralajes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow==2.16.1",
    "tensorflow-probability==0.24.0",
    "arviz>=0.22.0,<0.23",
    "matplotlib==3.8.4",
    "tf-keras==2.16.0",
    "numba==0.59.1",
    "seaborn==0.13.2",
    "jupyterlab==4.1.6",
    "astroquery[all]==0.4.7",
    "jupytext==1.16.2",
    "pandas==2.2.3",
    "tqdm>=4.67.1",
    "pymc>=5.20.1",
    "pymc-extras",
    "nutpie>=0.15.1",
    "jax[cpu]>=0.4.34",
    "numpyro>=0.17.0",
    "blackjax>=1.2.5",
    "pydot>=3.0.4",
    "graphviz>=0.20.3",
    "mkl>=2025.0.1",
    "pyro-ppl>=1.9.1",
    "polars>=1.31.0",
    "astropy>=7.1.0",
]

[dependency-groups]
dev = [
    "ipywidgets==8.1.5",
    "ipykernel>=6.29.5",
    "ruff>=0.9.2",
    "findblas>=0.1.26.post1",
]

[tool.uv.sources]
pymc-extras = { git = "https://github.com/pymc-devs/pymc-extras" }
