[project]
name = "estimacion-paralajes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow==2.21.0",
    "tensorflow-probability==0.25.0",
    "arviz>=0.22.0,<0.23",
    "matplotlib==3.10.8",
    "tf-keras==2.21.0",
    "numba==0.64.0",
    "seaborn==0.13.2",
    "jupyterlab==4.5.6",
    "astroquery[all]==0.4.11",
    "jupytext==1.19.1",
    "pandas==2.3.3",
    "tqdm>=4.67.1",
    "pymc>=5.28.2,<6",
    "pymc-extras>=0.10.0",
    "nutpie>=0.16.8",
    "jax[cpu]>=0.7.0,<0.8",
    "numpyro>=0.20.0,<0.21",
    "blackjax>=1.2.5",
    "pydot>=3.0.4",
    "graphviz>=0.20.3",
    "mkl>=2025.0.1",
    "pyro-ppl>=1.9.1",
    "polars>=1.39.3",
    "astropy>=7.1.0",
    "funsor>=0.4.5",
]

[dependency-groups]
dev = [
    "ipywidgets==8.1.8",
    "ipykernel>=6.29.5",
    "ruff>=0.9.2",
    "findblas>=0.1.26.post1",
]
