[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
colab = [
    "numpyro",
    "astroquery",
]
full = [
    "arviz",
    "matplotlib",
    "numba",
    "seaborn",
    "jupyterlab",
    "astroquery[all]",
    "jupytext>=1.19.3,<2",
    "pandas",
    "tqdm",
    "pymc",
    "pymc-extras",
    "nutpie",
    "jax[cpu]>=0.10.2,<0.11",
    "pydot>=4.0.1,<5",
    "graphviz",
    "mkl>=2026.0.0,<2027",
    "pyro-ppl",
    "polars",
    "astropy",
    "funsor",
    "numpyro",
    "h5netcdf",
    "h5py",
    "blackjax",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipywidgets",
    "ipykernel",
    "ruff>=0.15.18,<0.16",
    "findblas>=0.1.26.post1,<0.2",
]

[tool.pixi.workspace]
authors = ["IsaacMercado <mercadoluis095@gmail.com>"]
channels = ["conda-forge", "main"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
pymc = { version = ">=6.0.1,<7", channel = "conda-forge" }
ipykernel = ">=7.3.0,<8"
seaborn = { version = ">=0.13.2,<0.14", channel = "conda-forge" }
ipywidgets = ">=8.1.8,<9"
cmdstan = { version = ">=2.39.0,<3", channel = "conda-forge" }
cmdstanpy = { version = ">=1.3.0,<2", channel = "conda-forge" }
astroquery = { version = ">=0.4.11,<0.5", channel = "conda-forge" }
astropy = { version = ">=8.0.0,<9", channel = "conda-forge" }
pymc-extras = { version = ">=0.12.0,<0.13", channel = "conda-forge" }
notebook = ">=7.6.0,<8"
polars = { version = ">=1.41.2,<2", channel = "conda-forge" }
nutpie = { version = ">=0.16.10,<0.17", channel = "conda-forge" }
pyro-ppl = { version = ">=1.9.1,<2", channel = "conda-forge" }
pytorch = { version = ">=2.12.0,<3", channel = "conda-forge" }
python-graphviz = { version = ">=0.21,<0.22", channel = "conda-forge" }
pandas = { version = ">=3.0.3,<4", channel = "conda-forge" }
arviz = { version = ">=1.2.0,<2", channel = "conda-forge" }
r = ">=4.5,<4.6"
r-ggplot2 = ">=4.0.3,<5"
funsor = ">=0.4.7,<0.5"
astropy-healpix = { version = ">=1.1.3,<2", channel = "conda-forge" }
libblas = { version = "*", build = "*mkl", channel = "conda-forge" }
numpy = ">=2.4.6,<3"

[tool.pixi.pypi-dependencies]
project = { path = ".", editable = true }
tensorflow = ">=2.20.0, <3"
tensorflow-probability = ">=0.25.0, <0.26"
tf-keras = ">=2.20.1, <3"
blackjax = ">=1.5, <2"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.target.linux-64.dependencies]
jaxlib = { version = ">=0.10.1,<0.11", channel = "conda-forge" }
numpyro = { version = ">=0.21.0,<0.22", channel = "conda-forge" }

[tool.pixi.target.win-64.pypi-dependencies]
numpyro = ">=0.21.0, <0.22"
